--- a/Flask_notes/templates/for_loops_2.html
+++ b/Flask_notes/templates/for_loops_2.html
@@ -8,6 +8,7 @@
     <h1>Loops in Jinja2</h1>
     <h2>For loop & conditional statements</h2>
 
+    # Jinja loop
     {% for user, os in user_os.items() &}
 
         {% if os == "Windows" %}
