--- a/Flask_notes/MicroBlog_Project/templates/home.html
+++ b/Flask_notes/MicroBlog_Project/templates/home.html
@@ -31,6 +31,7 @@
         
         <section>
             <h1>Recent Posts</h1>
+            # Jinja for loop
             {% for entry in entries %}
             <article class="entry">
                 <div>
