--- a/Flask_notes/MicroBlog_Project/templates/home.html
+++ b/Flask_notes/MicroBlog_Project/templates/home.html
@@ -35,7 +35,7 @@
             {% for entry in entries %}
             <article class="entry">
                 <div>
-                    <h2 class="entry__title">{{ entry[0] | truncate(30, true) }}</h2>
+                    <h2 class="entry__title">{{ entry[0] | truncate(30, true) }}</h2> # Jinja function to truncate a string 
                     <time class="entry__date" datetime="03-04-2024">| {{ entry[1] }}</time>
                 </div>
                 <p class="entry__content">{{ entry[0] }}</p>
